PL3Java/src/main/java/linguine/LinguineParser.java
// Generated from /Users/samuelpintilei/PL3Compiladores/Linguine/LinguineParser.g4 by ANTLR 4.13.1
package linguine;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LinguineParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LET=1, IF=2, THEN=3, ELSE=4, ELSEIF=5, FOR=6, WHILE=7, FUN=8, SHOW=9, 
		MATCH=10, WITH=11, BOOLEAN=12, PIPE=13, ID=14, FLOAT=15, INT=16, STRING=17, 
		PLUS=18, MINUS=19, MUL=20, DIV=21, EQ=22, PLUSPLUS=23, MINUSMINUS=24, 
		GT=25, LT=26, GTE=27, LTE=28, AND=29, OR=30, ASSIGN=31, LPAREN=32, RPAREN=33, 
		COMMA=34, ARROW=35, LCURLY=36, RCURLY=37, SEMICOLON=38, NLINE=39, QEST=40, 
		ESPACIO_BLANCO=41;
	public static final int
		RULE_program = 0, RULE_sentencia = 1, RULE_declaracion = 2, RULE_asignacion = 3, 
		RULE_for = 4, RULE_while = 5, RULE_condicional = 6, RULE_funcion = 7, 
		RULE_params = 8, RULE_show = 9, RULE_match = 10, RULE_cases = 11, RULE_case = 12, 
		RULE_expresion = 13, RULE_args = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "sentencia", "declaracion", "asignacion", "for", "while", 
			"condicional", "funcion", "params", "show", "match", "cases", "case", 
			"expresion", "args"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'let'", "'if'", "'then'", "'else'", "'elseif'", "'for'", "'while'", 
			"'fun'", "'show'", "'match'", "'with'", null, "'|'", null, null, null, 
			null, "'+'", "'-'", "'*'", "'/'", "'=='", "'++'", "'--'", "'>'", "'<'", 
			"'>='", "'<='", "'&&'", "'||'", "'='", "'('", "')'", "','", "'->'", "'{'", 
			"'}'", "';'", null, "'?'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LET", "IF", "THEN", "ELSE", "ELSEIF", "FOR", "WHILE", "FUN", "SHOW", 
			"MATCH", "WITH", "BOOLEAN", "PIPE", "ID", "FLOAT", "INT", "STRING", "PLUS", 
			"MINUS", "MUL", "DIV", "EQ", "PLUSPLUS", "MINUSMINUS", "GT", "LT", "GTE", 
			"LTE", "AND", "OR", "ASSIGN", "LPAREN", "RPAREN", "COMMA", "ARROW", "LCURLY", 
			"RCURLY", "SEMICOLON", "NLINE", "QEST", "ESPACIO_BLANCO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LinguineParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LinguineParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(LinguineParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(LinguineParser.SEMICOLON, i);
		}
		public List<TerminalNode> NLINE() { return getTokens(LinguineParser.NLINE); }
		public TerminalNode NLINE(int i) {
			return getToken(LinguineParser.NLINE, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguineParserListener ) ((LinguineParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguineParserListener ) ((LinguineParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguineParserVisitor ) return ((LinguineParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4295219142L) != 0)) {
				{
				{
				setState(30);
				sentencia();
				setState(31);
				match(SEMICOLON);
				setState(33);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NLINE) {
					{
					setState(32);
					match(NLINE);
					}
				}

				}
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaContext extends ParserRuleContext {
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public CondicionalContext condicional() {
			return getRuleContext(CondicionalContext.class,0);
		}
		public ShowContext show() {
			return getRuleContext(ShowContext.class,0);
		}
		public MatchContext match() {
			return getRuleContext(MatchContext.class,0);
		}
		public ForContext for_() {
			return getRuleContext(ForContext.class,0);
		}
		public WhileContext while_() {
			return getRuleContext(WhileContext.class,0);
		}
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public FuncionContext funcion() {
			return getRuleContext(FuncionContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguineParserListener ) ((LinguineParserListener)listener).enterSentencia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguineParserListener ) ((LinguineParserListener)listener).exitSentencia(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguineParserVisitor ) return ((LinguineParserVisitor<? extends T>)visitor).visitSentencia(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentencia);
		try {
			setState(49);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(40);
				asignacion();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(41);
				declaracion();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(42);
				condicional();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(43);
				show();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(44);
				match();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(45);
				for_();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(46);
				while_();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(47);
				expresion(0);
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(48);
				funcion();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionContext extends ParserRuleContext {
		public TerminalNode LET() { return getToken(LinguineParser.LET, 0); }
		public TerminalNode ID() { return getToken(LinguineParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(LinguineParser.ASSIGN, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public CondicionalContext condicional() {
			return getRuleContext(CondicionalContext.class,0);
		}
		public MatchContext match() {
			return getRuleContext(MatchContext.class,0);
		}
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguineParserListener ) ((LinguineParserListener)listener).enterDeclaracion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguineParserListener ) ((LinguineParserListener)listener).exitDeclaracion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguineParserVisitor ) return ((LinguineParserVisitor<? extends T>)visitor).visitDeclaracion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(LET);
			setState(52);
			match(ID);
			setState(53);
			match(ASSIGN);
			setState(57);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOLEAN:
			case ID:
			case FLOAT:
			case INT:
			case STRING:
			case LPAREN:
				{
				setState(54);
				expresion(0);
				}
				break;
			case IF:
				{
				setState(55);
				condicional();
				}
				break;
			case MATCH:
				{
				setState(56);
				match();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AsignacionContext extends ParserRuleContext {
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
	 
		public AsignacionContext() { }
		public void copyFrom(AsignacionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AsigCondContext extends AsignacionContext {
		public TerminalNode ID() { return getToken(LinguineParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(LinguineParser.ASSIGN, 0); }
		public CondicionalContext condicional() {
			return getRuleContext(CondicionalContext.class,0);
		}
		public AsigCondContext(AsignacionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguineParserListener ) ((LinguineParserListener)listener).enterAsigCond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguineParserListener ) ((LinguineParserListener)listener).exitAsigCond(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguineParserVisitor ) return ((LinguineParserVisitor<? extends T>)visitor).visitAsigCond(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DecContext extends AsignacionContext {
		public TerminalNode ID() { return getToken(LinguineParser.ID, 0); }
		public TerminalNode MINUSMINUS() { return getToken(LinguineParser.MINUSMINUS, 0); }
		public DecContext(AsignacionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguineParserListener ) ((LinguineParserListener)listener).enterDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguineParserListener ) ((LinguineParserListener)listener).exitDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguineParserVisitor ) return ((LinguineParserVisitor<? extends T>)visitor).visitDec(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AsigMatchContext extends AsignacionContext {
		public TerminalNode ID() { return getToken(LinguineParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(LinguineParser.ASSIGN, 0); }
		public MatchContext match() {
			return getRuleContext(MatchContext.class,0);
		}
		public AsigMatchContext(AsignacionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguineParserListener ) ((LinguineParserListener)listener).enterAsigMatch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguineParserListener ) ((LinguineParserListener)listener).exitAsigMatch(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguineParserVisitor ) return ((LinguineParserVisitor<? extends T>)visitor).visitAsigMatch(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AsigSimpleContext extends AsignacionContext {
		public TerminalNode ID() { return getToken(LinguineParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(LinguineParser.ASSIGN, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public AsigSimpleContext(AsignacionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguineParserListener ) ((LinguineParserListener)listener).enterAsigSimple(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguineParserListener ) ((LinguineParserListener)listener).exitAsigSimple(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguineParserVisitor ) return ((LinguineParserVisitor<? extends T>)visitor).visitAsigSimple(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IncContext extends AsignacionContext {
		public TerminalNode ID() { return getToken(LinguineParser.ID, 0); }
		public TerminalNode PLUSPLUS() { return getToken(LinguineParser.PLUSPLUS, 0); }
		public IncContext(AsignacionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguineParserListener ) ((LinguineParserListener)listener).enterInc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguineParserListener ) ((LinguineParserListener)listener).exitInc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguineParserVisitor ) return ((LinguineParserVisitor<? extends T>)visitor).visitInc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_asignacion);
		try {
			setState(72);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new AsigSimpleContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(59);
				match(ID);
				setState(60);
				match(ASSIGN);
				setState(61);
				expresion(0);
				}
				break;
			case 2:
				_localctx = new AsigCondContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				match(ID);
				setState(63);
				match(ASSIGN);
				setState(64);
				condicional();
				}
				break;
			case 3:
				_localctx = new AsigMatchContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(65);
				match(ID);
				setState(66);
				match(ASSIGN);
				setState(67);
				match();
				}
				break;
			case 4:
				_localctx = new IncContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(68);
				match(ID);
				setState(69);
				match(PLUSPLUS);
				}
				break;
			case 5:
				_localctx = new DecContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(70);
				match(ID);
				setState(71);
				match(MINUSMINUS);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ForContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(LinguineParser.FOR, 0); }
		public TerminalNode LPAREN() { return getToken(LinguineParser.LPAREN, 0); }
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(LinguineParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(LinguineParser.SEMICOLON, i);
		}
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(LinguineParser.RPAREN, 0); }
		public TerminalNode LCURLY() { return getToken(LinguineParser.LCURLY, 0); }
		public TerminalNode RCURLY() { return getToken(LinguineParser.RCURLY, 0); }
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public List<TerminalNode> NLINE() { return getTokens(LinguineParser.NLINE); }
		public TerminalNode NLINE(int i) {
			return getToken(LinguineParser.NLINE, i);
		}
		public ForContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_for; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguineParserListener ) ((LinguineParserListener)listener).enterFor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguineParserListener ) ((LinguineParserListener)listener).exitFor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguineParserVisitor ) return ((LinguineParserVisitor<? extends T>)visitor).visitFor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ForContext for_() throws RecognitionException {
		ForContext _localctx = new ForContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_for);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(FOR);
			setState(75);
			match(LPAREN);
			setState(76);
			declaracion();
			setState(77);
			match(SEMICOLON);
			setState(78);
			expresion(0);
			setState(79);
			match(SEMICOLON);
			setState(80);
			asignacion();
			setState(81);
			match(RPAREN);
			setState(82);
			match(LCURLY);
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NLINE) {
				{
				{
				setState(83);
				match(NLINE);
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			{
			setState(99);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(89);
					sentencia();
					setState(90);
					match(SEMICOLON);
					setState(94);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==NLINE) {
						{
						{
						setState(91);
						match(NLINE);
						}
						}
						setState(96);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					} 
				}
				setState(101);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			setState(102);
			sentencia();
			setState(103);
			match(SEMICOLON);
			}
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NLINE) {
				{
				{
				setState(105);
				match(NLINE);
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(111);
			match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhileContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(LinguineParser.WHILE, 0); }
		public TerminalNode LPAREN() { return getToken(LinguineParser.LPAREN, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(LinguineParser.RPAREN, 0); }
		public TerminalNode LCURLY() { return getToken(LinguineParser.LCURLY, 0); }
		public TerminalNode RCURLY() { return getToken(LinguineParser.RCURLY, 0); }
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(LinguineParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(LinguineParser.SEMICOLON, i);
		}
		public List<TerminalNode> NLINE() { return getTokens(LinguineParser.NLINE); }
		public TerminalNode NLINE(int i) {
			return getToken(LinguineParser.NLINE, i);
		}
		public WhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguineParserListener ) ((LinguineParserListener)listener).enterWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguineParserListener ) ((LinguineParserListener)listener).exitWhile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguineParserVisitor ) return ((LinguineParserVisitor<? extends T>)visitor).visitWhile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhileContext while_() throws RecognitionException {
		WhileContext _localctx = new WhileContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_while);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(WHILE);
			setState(114);
			match(LPAREN);
			setState(115);
			expresion(0);
			setState(116);
			match(RPAREN);
			setState(117);
			match(LCURLY);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NLINE) {
				{
				{
				setState(118);
				match(NLINE);
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			{
			setState(134);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(124);
					sentencia();
					setState(125);
					match(SEMICOLON);
					setState(129);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==NLINE) {
						{
						{
						setState(126);
						match(NLINE);
						}
						}
						setState(131);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					} 
				}
				setState(136);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			setState(137);
			sentencia();
			setState(138);
			match(SEMICOLON);
			}
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NLINE) {
				{
				{
				setState(140);
				match(NLINE);
				}
				}
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(146);
			match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CondicionalContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(LinguineParser.IF, 0); }
		public List<TerminalNode> LPAREN() { return getTokens(LinguineParser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(LinguineParser.LPAREN, i);
		}
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(LinguineParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(LinguineParser.RPAREN, i);
		}
		public List<TerminalNode> THEN() { return getTokens(LinguineParser.THEN); }
		public TerminalNode THEN(int i) {
			return getToken(LinguineParser.THEN, i);
		}
		public List<TerminalNode> LCURLY() { return getTokens(LinguineParser.LCURLY); }
		public TerminalNode LCURLY(int i) {
			return getToken(LinguineParser.LCURLY, i);
		}
		public List<TerminalNode> RCURLY() { return getTokens(LinguineParser.RCURLY); }
		public TerminalNode RCURLY(int i) {
			return getToken(LinguineParser.RCURLY, i);
		}
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(LinguineParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(LinguineParser.SEMICOLON, i);
		}
		public List<TerminalNode> NLINE() { return getTokens(LinguineParser.NLINE); }
		public TerminalNode NLINE(int i) {
			return getToken(LinguineParser.NLINE, i);
		}
		public List<TerminalNode> ELSEIF() { return getTokens(LinguineParser.ELSEIF); }
		public TerminalNode ELSEIF(int i) {
			return getToken(LinguineParser.ELSEIF, i);
		}
		public TerminalNode ELSE() { return getToken(LinguineParser.ELSE, 0); }
		public CondicionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguineParserListener ) ((LinguineParserListener)listener).enterCondicional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguineParserListener ) ((LinguineParserListener)listener).exitCondicional(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguineParserVisitor ) return ((LinguineParserVisitor<? extends T>)visitor).visitCondicional(this);
			else return visitor.visitChildren(this);
		}
	}
